<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashForward</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Search</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Main -->
    <string name="set_date">Set date for next Flash</string>
    <string name="start_flash">Flash!</string>

    <!-- Preferences -->
    <string name="security_heading">Security</string>
    <string name="password_info">Require password (up to 20 characters) to set Flash</string>
    <string name="password_title">Password</string>
    <string name="set_password_title">Set Password</string>
    <string name="pin_info">Require 4-digit pin to set Flash</string>
    <string name="pin_title">Pin</string>
    <string name="set_pin_title">Set Pin</string>
    <string name="password_pin_pref">Select password or pin</string>
    <string name="flash_heading">Flash Settings</string>
    <string name="delay_title">Flash Delay</string>
    <string name="delay_info">Default delay for Flashes</string>
    <string name="save_title">Save Flashes</string>
    <string name="save_info">Save Flashes to Gallery once they have popped up</string>
    <string name="title_activity_photo_intent">Camera</string>

    <!-- Camera -->
    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">FlashForward Album</string>
    <string name="title_activity_flash_date_set">FlashDateSetActivity</string>
    <string name="title_activity_start_photo_intent">StartPhotoIntent</string>
    <string name="flash_info_intro">Your Flash will pop up on:</string>

</resources>
